--- a/.github/workflows/Debug.yml
+++ b/.github/workflows/Debug.yml
@@ -21,11 +21,14 @@ jobs:
         distribution: 'zulu'
         java-version: '17'
 
+    - name: Create Properties File
+      run: touch local.properties
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
     - name: Build debug APK
-      run: bash ./gradlew assembleDebug
+      run: ./gradlew assembleDebug
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.3
