--- a/.github/workflows/Debug.yml
+++ b/.github/workflows/Debug.yml
@@ -30,8 +30,16 @@ jobs:
     - name: Build debug APK
       run: ./gradlew assembleDebug
 
-    - name: Upload a Build Artifact
+    - name: Create Libs.zip if exist
+      run: |
+        if [ -d "app/build/libs/" ]; then
+          zip -r libs.zip app/build/libs/
+        fi
+
+    - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: debug-release.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: artifacts
+        path: |
+          app/build/outputs/apk/debug/*.apk
+          libs.zip
