--- a/.github/workflows/Debug.yml
+++ b/.github/workflows/Debug.yml
@@ -30,16 +30,21 @@ jobs:
     - name: Build debug APK
       run: ./gradlew assembleDebug
 
-    - name: Create Libs.zip if exist
+    - name: Upload APKs
       run: |
-        if [ -d "app/build/libs/" ]; then
-          zip -r libs.zip app/build/libs/
-        fi
+        for apk_file in app/build/outputs/apk/debug/*.apk
+        do
+          artifact_name=$(basename "$apk_file" .apk)
+          echo "Uploading $artifact_name..."
+          mv "$apk_file" "$artifact_name.apk"
+          zip -r "$artifact_name.zip" "$artifact_name.apk"
+          rm "$artifact_name.apk"
+          echo "::set-output name=artifacts::$artifact_name.zip"
+        done
+      shell: bash
 
-    - name: Upload Build Artifacts
+    - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: artifacts
-        path: |
-          app/build/outputs/apk/debug/*.apk
-          libs.zip
+        name: ${{ needs.build.outputs.artifacts }}
+        path: ./
