--- a/.github/workflows/Debug.yml
+++ b/.github/workflows/Debug.yml
@@ -1,10 +1,6 @@
 name: Build Debug APK
 
 on:
-  # push:
-  #   branches: [ "master" ]
-  # pull_request:
-  #   branches: [ "master" ]
   workflow_dispatch:
 
 jobs:
@@ -30,21 +26,8 @@ jobs:
     - name: Build debug APK
       run: ./gradlew assembleDebug
 
-    - name: Upload APKs
-      run: |
-        for apk_file in app/build/outputs/apk/debug/*.apk
-        do
-          artifact_name=$(basename "$apk_file" .apk)
-          echo "Uploading $artifact_name..."
-          mv "$apk_file" "$artifact_name.apk"
-          zip -r "$artifact_name.zip" "$artifact_name.apk"
-          rm "$artifact_name.apk"
-          echo "::set-output name=artifacts::$artifact_name.zip"
-        done
-      shell: bash
-
-    - name: Upload Artifact
+    - name: Upload APK as Artifact
       uses: actions/upload-artifact@v3.1.3
       with:
-        name: ${{ needs.build.outputs.artifacts }}
-        path: ./
+        name: arm64-v8a-debug
+        path: app/build/outputs/apk/debug/*arm64-v8a-debug.apk
